--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,6 +3,8 @@
     flex-wrap: wrap;
     justify-content: space-around;
     background-color: white;
+    position: relative;
+    top: 0;
 }
 
 .left-bar{
