--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,10 +5,15 @@
     background-color: white;
     position: relative;
     top: 0;
+    height: 60px;
 }
 
 .left-bar{
     margin: 15px 0;
+}
+
+img {
+    width: 70%;
 }
 
 .city-input {
